[package]
name = "tokio-timer"
version = "0.1.0"
authors = ["Brock Smedley <brock@firstfoundry.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.21", features = ["rt-threaded", "time", "macros", "sync"]}